# capseal

./: .gitignore  CHANGELOG.md  Makefile  README.md  SKILL.md  manifest.json  pyproject.toml
BEF-main/: .dockerignore  .gitignore  BEFZK_folder_documentation.md  BICEPsrc_folder_documentation.md  CRITICAL_ATTACK_SURFACES.txt  DIFF_ANALYSIS_SUMMARY.md  Dockerfile  ENGINE_ADAPTER_SUMMARY.md  FUSIONALPHA_folder_documentation.md  GEOMZK_CRYPTO_documentation.md  INSTALL.md  MERGE_RESOLUTION_GUIDE.md  Makefile  README.md  SECURITY_ACTION_ITEMS.md  action.yml  artifact_set_demo.json  bef_outputs.json  bench_fri_rust_vs_py.py  capseal  capseal.spec  checkpoint_0000.json  checkpoint_0001.json  checkpoint_0002.json  demo.py  demo_setup.sh  docker-compose.yml  enncpp_folder_documentation.md  fusion_graph.json  fusion_graph_eeg.json  inspect_pystate.py  inspect_rust.py  momentum_strategy_v2.cap  momentum_strategy_v2_bad.cap  package.json  pyproject.toml  pytest.ini  requirements.txt  run_full_pipeline.sh  test_demo_receipt.json  (+3 more)
BEF-main/Formula/: capseal.rb
BEF-main/backends/: __init__.py  geom_adapter.py  risc0_adapter.py
BEF-main/bef_rust/: Cargo.toml  build.rs
BEF-main/bef_zk/: __init__.py  adapter.py  transcript.py  verifier_errors.py
BEF-main/canonical/: __init__.py  bicep_state.py  project_trace.py
BEF-main/capsole_docs_patch/: README.md
BEF-main/capsule_bench/: __init__.py  artifacts.py  cli.py  events.py  manifests.py  packing.py
BEF-main/config/: manifest_signers.json  trusted_relays.json
BEF-main/da_profiles/: minimal.json  strong.json  swap_record.json
BEF-main/data/: sub-NDARBW026UGE_funwithfractals.json
BEF-main/docs/: ALL_DOCS.md  FRONTEND_BACKEND_INTEGRATION_ANALYSIS.md  FRONTEND_LAYOUT_SNAPSHOT.md  GAP_MAP.md  SECURITY_ANALYSIS.md  bef_upgrade_plan.md  benchmark_policy_schema.json  index.md  market_dashboard_pipeline.md  primer.md  security_model.md  stc_da_profiles.md  trace_statement_spec.md
BEF-main/enn-cpp/: CMakeLists.txt  Makefile  parity_sanity_check.py
BEF-main/examples/: github-action.yml
BEF-main/geomzk/: CMakeLists.txt
BEF-main/gpu_accumulator/: README.md  __init__.py  sketch_trace.py  stream_accumulator.py
BEF-main/migrations/: 001_events.sql
BEF-main/nova_stc/: Cargo.toml  bench_results_small.json  geom_stats.json
BEF-main/organized_documents/: 01_help.txt  04_code_sketches_README.txt  07_docs_archive_BACKEND_READINESS_GAPS.md  09_docs_archive_bef_compact_v1_spec.md  10_docs_archive_BEF_CURRENT_STATUS.md  11_docs_archive_bef_trace_commitment.md  12_docs_archive_BEF-Stream-Accum-summary.md  13_docs_archive_colab_instructions.txt  14_docs_archive_da_profile_router.md  15_docs_archive_encoding.md  16_docs_archive_fri_parameter_guidance.md  17_docs_archive_geom_backend_analysis.md  18_docs_archive_hssa_vs_kzg_bench.md  19_docs_archive_ivc_state_R.md  20_docs_archive_operator_flow.md  21_docs_archive_README.txt  22_docs_archive_stc_parameter_guidance.md  23_docs_archive_stc_pc_backend.md  24_docs_archive_stc_vm_mapping.md  25_docs_archive_streaming_trace_commitment_formal.md  26_docs_hssa_da_protocol.md  27_docs_notes_dec18_plan.md  31_docs_primer.md  32_docs_README.md  33_docs_roadmap.md  34_docs_security_model.md  35_docs_stc_backend_architecture.md  37_docs_trace_adapter_contract.md  47_INSTRUCTIONS.txt  49_logs.txt  51_policies_policy2.txt  52_README.md  53_server_README.md
BEF-main/output/: adapter_proof.json  artifact_manifest.json  da_challenge.json  events.jsonl  pipeline_stats.json  stc_trace.json  strategy_capsule.json
BEF-main/policies/: benchmark_policy_v1.json  demo_acl.json  demo_policy_v1.json  dummy_policy.v1.py  dummy_policy.v1.py.proof  policy1.txt.proof  policy2.txt.proof  policy_governed_openings.json  policy_net_demo.json  policy_no_undocumented_data.json  policy_pii_zero_tolerance.json  registry.json  registry.json.proof
BEF-main/policy/: backtest.py  execution_model.py  policy_v1.py  policy_v1.yaml
BEF-main/scripts/: agent_receipt_demo.py  artifact_manifest.py  bench_capseal.py  bench_sizes.py  boundary_tests.py  build_policy_registry.py  build_vm_trace.py  capseal_shell.sh  capsule_bench_cli.py  capsule_cli.py  check_binary_tamper.py  check_docs_consts.py  check_docs_consts_extended.py  collect_artifact_set.py  compute_trust_roots.py  convert_bdf_to_numpy.py  demo_run_and_verify.py  dev_daemon.sh  e2e_smoke.sh  e2e_verify.mjs  eeg_to_bicep_csv.py  evaluate_signals.py  export_geom_trace.py  extensive_benchmark.py  fetch_dataset.py  final_benchmark.py  fri_param_table.py  fuzz_geom_air.py  geom_programs.py  happy_path.py  logs  loom_bef_demo.py  loom_demo.sh  make_geomzk_sample.py  make_hssa_stc_dist.sh  monitor_telemetry.py  mutate_proof.py  regression_suite.py  relay_forward.py  release.py  (+30 more)
BEF-main/server/: event_store.py  event_store_pg.py  relay.py
BEF-main/services/: cache.py
BEF-main/test_capseal_run/: adapter_proof.json  artifact_manifest.json  da_challenge.json  events.jsonl  my_generated.cap  pipeline_stats.json  stc_trace.json  strategy_capsule.json
BEF-main/tests/: test_agent_loop.py  test_api_smoke.py  test_attest.py  test_capsule_bench.py  test_capsule_verify.py  test_cli_exposure.py  test_cli_roundtrip.py  test_da_provider.py  test_event_store.py  test_geom_serialization.py  test_incremental_trace.py  test_llm_backend.py  test_policy_registry.py
BEF-main/tmp_cap/: artifact_manifest.json  capsule.json  manifest.json  policy.json  proof.bin.zst
BEF-main/tmp_cap_extract/: artifact_manifest.json  capsule.json  commitments.json  manifest.json  policy.json  proof.bin.zst
BEF-main/tmp_inspect/: README.md  events.jsonl  geom_proof.json  nova_stats.json  policy.json  strategy_capsule.json
BEF-main/tmp_quicktrace/: adapter_proof.json  artifact_manifest.json  da_challenge.json  events.jsonl  pipeline_stats.json  stc_trace.json  strategy_capsule.json
BEF-main/tmp_test/: index.js
BEF-main/ui/: ARCHITECTURE.md  Design_notes.txt  ENGINE_ADAPTER_COMPLETE.txt  IMPLEMENTATION_PLAN.md  Layout_hierarchy.txt  Plan.txt  Solution_notes.txt  index.html  package-lock.json  (+1 more)
capseal-tui/: Cargo.toml
(+1120 files in other folders)
