[package]
name = "bef_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "bef_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
nova_stc = { path = "../nova_stc" }
ark-ff = "0.4"
ark-std = "0.4"
hex = "0.4"
sha2 = "0.10"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
gpu = []

[build-dependencies]
cc = "1.0"
