[package]
name = "capseal-app"
version = "0.1.0"
description = "CapSeal - Governed Execution Console"
authors = ["CapSeal Team"]
license = "MIT"
repository = "https://github.com/capseal/capseal"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "capseal_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["sync"] }

# Local capseal_core (shared with bef_rust)
# bef_rust = { path = "../../bef_rust" }
